2012-02-07  Robert Larice
 * src/main.c ,
 * src/frontend/outitf.c ,
 * src/frontend/outitf.h ,
 * src/include/ngspice/ifsim.h ,
 * src/include/ngspice/noisedef.h ,
 * src/include/ngspice/trandefs.h ,
 * src/spicelib/analysis/acan.c ,
 * src/spicelib/analysis/cktsens.c ,
 * src/spicelib/analysis/dcop.c ,
 * src/spicelib/analysis/dctrcurv.c ,
 * src/spicelib/analysis/distoan.c ,
 * src/spicelib/analysis/pzan.c ,
 * src/spicelib/analysis/tfanal.c :
   use type `runDesc'

2012-02-07  Robert Larice
 * src/frontend/outitf.h ,
 * src/include/ngspice/typedefs.h :
   struct runDesc forward declaration

2012-02-07  Robert Larice
 * src/frontend/rawfile.c :
   comment/pinpoint a local misuse of a structure element

2012-02-06  Robert Larice
 * src/tclspice.c :
   drop some (char*) casts

2012-02-06  Robert Larice
 * src/frontend/vectors.c ,
 * src/misc/wlist.c :
   preserve const'ness of some casts

2012-02-06  Robert Larice
 * src/frontend/numparam/spicenum.c :
   drop (void*) cast of the dispose() argument

2012-02-06  Robert Larice
 * src/frontend/terminal.c :
   drop tgetstr() return value cast

2012-02-06  Robert Larice
 * src/frontend/parser/complete.c :
   drop (char*) cast in the third argument of ioctl()

2012-02-06  Robert Larice
 * src/frontend/outitf.c ,
 * src/frontend/spiceif.c ,
 * src/frontend/subckt.c ,
 * src/frontend/plotting/graf.c ,
 * src/spicelib/analysis/cktnames.c ,
 * src/spicelib/devices/hisim2/hsm2noi.c ,
 * src/spicelib/devices/hisimhv/hsmhvnoi.c ,
 * src/spicelib/parser/ifnewuid.c ,
 * src/spicelib/parser/inpptree.c ,
 * src/xspice/mif/mifsetup.c :
   drop some more casts

2012-02-06  Robert Larice
 * src/spicelib/analysis/analysis.c ,
 * src/spicelib/devices/urc/urcsetup.c :
   drop some casts

2012-02-06  Robert Larice
 * src/xspice/cm/cm.c ,
 * src/xspice/evt/evtsetup.c ,
 * src/xspice/evt/evttermi.c ,
 * src/xspice/mif/mifconvt.c ,
 * src/xspice/mif/mifload.c ,
 * src/xspice/mif/mifsetup.c :
   drop some (char*) casts
